--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "async": "^0.9.0",
     "bluebird": "^2.4.2",
     "js-yaml": "^3.2.4",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "progress": "^1.1.8",
+    "recursive-readdir": "^1.2.0"
   }
 }
