--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "plow.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "commander": "^2.5.1"
+    "chai": "^1.10.0",
+    "mocha": "^2.1.0"
   },
   "dependencies": {
     "async": "^0.9.0",
     "bluebird": "^2.4.2",
+    "commander": "^2.6.0",
+    "glob": "^4.3.2",
     "js-yaml": "^3.2.4",
     "lodash": "^2.4.1",
     "progress": "^1.1.8",
