--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "glob": "^4.3.2",
     "js-yaml": "^3.2.4",
     "lodash": "^2.4.1",
+    "minimatch": "^2.0.1",
     "progress": "^1.1.8",
     "recursive-readdir": "^1.2.0"
   }
